RESOLVED FIXED278443
`webpushd` app launch improvements
https://bugs.webkit.org/show_bug.cgi?id=278443
Summary `webpushd` app launch improvements
Brady Eidson
Reported 2024-08-20 21:07:22 PDT
`webpushd` app launch improvements
Attachments
Brady Eidson
Comment 1 2024-08-20 21:07:23 PDT
Brady Eidson
Comment 2 2024-08-21 09:10:38 PDT
EWS
Comment 3 2024-08-21 20:24:04 PDT
Committed 282602@main (5f64555f4058): <https://commits.webkit.org/282602@main> Reviewed commits have been landed. Closing PR #32510 and removing active labels.
Ben Schwartz
Comment 4 2024-08-22 09:09:08 PDT
Reopened Bugzilla. REGRESSION (282602@main): [ iOS ] App WebKitTestRunnerApp.app crashed before stdin could be attached, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=278525.
EWS
Comment 5 2024-08-23 13:41:29 PDT
Committed 282672@main (a984be0fb37d): <https://commits.webkit.org/282672@main> Reviewed commits have been landed. Closing PR #32627 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.