Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataStorePrivate.h
@@ -31,6 +31,7 @@ NS_ASSUME_NONNULL_BEGIN
 @class WKSecurityOrigin;
 @class WKWebView;
 @class _WKResourceLoadStatisticsThirdParty;
+@class _WKWebPushAction;
 @class _WKWebsiteDataStoreConfiguration;
 
 @protocol _WKWebsiteDataStoreDelegate;
@@ -147,6 +148,8 @@ typedef NS_ENUM(uint8_t, _WKRestrictedOpenerType) {
 
 @property (nonatomic, readonly) NSUUID *_identifier;
 @property (nonatomic, readonly) NSString *_webPushPartition;
+
++ (void)_setWebPushActionHandler:(WKWebsiteDataStore *(^)(_WKWebPushAction *))handler WK_API_AVAILABLE(ios(WK_IOS_TBA));
 
 @end
 
