Source/WebKit/UIProcess/Cocoa/PlatformWritingToolsUtilities.h
@@ -27,6 +27,7 @@
 
 #if ENABLE(WRITING_TOOLS)
 
+#import <WebCore/WritingToolsTypes.h>
 #import <pal/spi/cocoa/WritingToolsSPI.h>
 #import <wtf/RetainPtr.h>
 
